objects/copado__Destination_Org__c.object
<CustomObject>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <formula>if(copado__Step_Count__c &gt; 0,
copado__Count_Completed__c / copado__Step_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Count_Completed__c</fullName>
        <label># Completed</label>
        <summaryFilterItems>
            <field>copado__Deployment_Job__c.copado__Status__c</field>
            <operation>equals</operation>
            <value>Success, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__Deployment_Job__c.copado__Destination_Org__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Deployed__c</fullName>
        <formula>IF(copado__Step_Count__c &gt; 0,
copado__SUM_Deployed__c / copado__Step_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Deployment__c</fullName>
        <label>Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipName>Destination_Orgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>copado__Deployment_Job__c.copado__Deployed__c</summarizedField>
        <summaryForeignKey>copado__Deployment_Job__c.copado__Destination_Org__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Status_Flag__c</fullName>
        <formula>IMAGE( 
  CASE(  copado__Status__c,  &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
  &quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
  &quot;/s.gif&quot;), 
   &quot;&quot; )</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Step_Count__c</fullName>
        <label>Step Count</label>
        <summaryForeignKey>copado__Deployment_Job__c.copado__Destination_Org__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__To_Org_Name__c</fullName>
        <formula>copado__To_Org__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Credential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__To_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__Org__c.CreatedById</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Destination Credentials</relationshipLabel>
        <relationshipName>Deployments_to</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Destination Credential</label>
    <nameField>
        <displayFormat>DO-{0000}</displayFormat>
        <label>Destination Credential Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destination Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>